--- a/artikel.html
+++ b/artikel.html
@@ -31,13 +31,13 @@
      <div class="container menu-primer">
         <ul>
             <li>
-               <a href="beranda.html" title="Beranda" class="active">Beranda</a>
+               <a href="beranda.html" title="Beranda" >Beranda</a>
             </li>
             <li><a href="tentang.html" title="Tentang">Tentang</a>
            </li> 
             <li><a href="layanan.html" title="Layanan">Layanan</a>
            </li>
-           <li><a href="artikel.html" title="Artikel">Artikel</a>
+           <li><a href="artikel.html" title="Artikel"class="active">Artikel</a>
            </li>
            <li><a href="kontak.html" title="kontak">kontak saya</a>
            </li>
