--- a/layanan.html
+++ b/layanan.html
@@ -32,11 +32,11 @@
      <div class="container menu-primer">
         <ul>
             <li>
-               <a href="beranda.html" title="Beranda" class="active">Beranda</a>
+               <a href="beranda.html" title="Beranda">Beranda</a>
             </li>
             <li><a href="tentang.html" title="Tentang">Tentang</a>
            </li> 
-            <li><a href="layanan.html" title="Layanan">Layanan</a>
+            <li><a href="layanan.html" title="Layanan"class="active">Layanan</a>
            </li>
            <li><a href="artikel.html" title="Artikel">Artikel</a>
            </li>
