--- a/tentang.html
+++ b/tentang.html
@@ -31,9 +31,9 @@
      <div class="container menu-primer">
         <ul>
             <li>
-               <a href="beranda.html" title="Beranda" class="active">Beranda</a>
+               <a href="beranda.html" title="Beranda">Beranda</a>
             </li>
-            <li><a href="tentang.html" title="Tentang">Tentang</a>
+            <li><a href="tentang.html" title="Tentang"class="active">Tentang</a>
            </li> 
             <li><a href="layanan.html" title="Layanan">Layanan</a>
            </li>
