--- a/artikel.html
+++ b/artikel.html
@@ -44,6 +44,7 @@
        </ul>
 </div>
     <!--end menu primer-->
+    
     <!--start effect-->
     <div class="container">
         <figure class="snip1573">
@@ -71,7 +72,11 @@
       <a href="#"></a>
     </figure>
     <!--end effect-->
+    
     <!--start jumbotron-->
+    <div class="box-heading">
+        <h4><a href="Beranda.html" title="Beranda">Beranda</a>>Layanan</h4>
+        </div>
     <div class="container jumbotron ">
         <h1>Selamat Datang di Dapur Desi </h1>
         <h3>kami menyediakan berbagai tutorial dan resep masakan<br>
@@ -118,7 +123,7 @@
         <div class="main-home-one bg-coral ">
             <div class="main-one">
         <div class="box-heading">
-    <h4><a href="Beranda.html" title="Beranda">Beranda </a>> Artikel</h4>
+    <h4> Artikel</h4>
         </div>
         <div class="box-isi ">
     <ol>
