--- a/artikel.html
+++ b/artikel.html
@@ -75,7 +75,7 @@
     
     <!--start jumbotron-->
     <div class="box-heading">
-        <h4><a href="Beranda.html" title="Beranda">Beranda</a>>Layanan</h4>
+        <h4><a href="Beranda.html" title="Beranda">Beranda</a>>Artikel</h4>
         </div>
     <div class="container jumbotron ">
         <h1>Selamat Datang di Dapur Desi </h1>
