--- a/kontak.html
+++ b/kontak.html
@@ -45,11 +45,12 @@
        </ul>
    </div>
     <!--end menu primer-->
+    
     <!--start effect-->
+     <div class="box-heading">
+        <h4><a href="Beranda.html" title="Beranda">Beranda</a>>Layanan</h4>
+        </div>
     <div class="container bg-coral">
-        <div class="box-heading">
-        <h4><a href="beranda.html" title="Beranda">Beranda</a>>Layanan</h4>
-        </div
     <div class="container">
         <figure class="snip1573">
       <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample89.jpg" alt="sample89" />
