--- a/kontak.html
+++ b/kontak.html
@@ -78,6 +78,10 @@
         <h4><a href="beranda.html" title="Beranda">Beranda</a>>Kontak Kami</h4>
         </div>
     <!--start jumbotron-->
+        <div class="container bg-coral">
+        <div class="box-heading">
+        <h4><a href="beranda.html" title="Beranda">Beranda</a>>Kontak Kami</h4>
+        </div>
     <div class="container jumbotron ">
         <h1>Kontak Dapur Desi </h1>
         <h3>kami menyediakan berbagai tutorial dan resep masakan<br>
@@ -87,9 +91,6 @@
     
     <!--start alamat-->
     <div class="container bg-burlywood ">
-            <div class="box-heading">
-                <h4><a href="Beranda.html" title="Beranda">Beranda</a>>Kontak Saya</h4>
-            </div>
             <p>Anda dapat menghubungi kami dengan berkunjung langsung di dapur kami
             <br>atau dengan mengunjungi akun sosial media kami
             <br><a href="https://www.instagram.com/dapurdesi_/?hl=id" title="Instgram-DapurDesi">@dapurdesi_</a></p> 
