--- a/kontak.html
+++ b/kontak.html
@@ -77,6 +77,7 @@
         <div class="box-heading">
         <h4><a href="beranda.html" title="Beranda">Beranda</a>>Kontak Kami</h4>
         </div>
+        </div>
     <!--start jumbotron-->
         <div class="container bg-coral">
         <div class="box-heading">
